Added watson_assistant endpoint
